<resources>
    <string name="songle">Songle</string>
    <string name="map">Map</string>
    <string name="very_easy">Very Easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">EXTREME</string>
    <string name="show_list">Show List of Words Found</string>
    <string name="guess_song_hint">Can you guess the song?</string>
    <string name="guess_song">Guess the Song</string>
    <string name="welcome_title">SONGLE</string>
    <string name="welcome_play_button">NEW GAME</string>
    <string name="are_you_sure">Are you sure? Your progress will be erased.</string>
    <string name="welcome_resume_button">RESUME GAME</string>
    <string name="proceed">Proceed</string>
    <string name="go_back">Go Back</string>
    <string name="welcome_settings_button">SETTINGS</string>
    <string name="random">Guess a random song</string>
    <string name="game_over">GAME OVER</string>
    <string name="return_to_menu">RETURN TO MENU</string>
    <string name="replay_guessed_songs">REPLAY GUESSED SONGS!</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="finish">FINISH</string>
    <string name="you_ran_out_of_time">You ran out of time!</string>
    <string name="you_ran_out_of_attempts">You ran out of attempts!</string>
    <string name="attempts_left">Attempts left: %1$d</string>
    <string name="attemps_needed">Attempts needed: %1$d</string>
    <string name="time_taken">Time taken: %1$s</string>
    <plurals name="markers_found">
        <item quantity="one">Found %1$d marker, %2$s %% of markers</item>
        <item quantity="other">Found %1$d markers, %2$s %% of markers</item>
    </plurals>
    <string name="incorrect_try_again">Incorrect! Try again</string>
    <string name="you_guessed_it">You guessed it!</string>
    <string name="the_song_was">The song was \" %1$s \"</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="enter_between_0_and_99">Please enter a value between 0 and 99.</string>
    <string name="enter_between_0_and_59">Please enter a value between 0 and 59.</string>

    <!-- Content Descriptions -->
    <string name="crying_emoji">Crying emoji</string>
    <string name="confused_emoji">Confused emoji</string>
    <string name="party_emoji">Party emoji</string>
    <string name="turn_heatmap_on_and_off">Turn heatmap on and off</string>

    <string name="title_activity_choose_song">ChooseSong</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_set_timer_onoff">Play with timer:</string>
    <string name="pref_description_set_timer_onoff">Want to play against the clock?
    </string>

    <string name="pref_title_set_timer_amount">Set amount of time:</string>
    <string name="pref_description_set_timer_amount">Set the amount of time for the timer</string>

    <string name="pref_title_set_timer_background">Timer runs in background:</string>
    <string name="pref_description_set_timer_background">Choose whether the timer should keep running even if Songle is closed.</string>

    <string name="pref_title_choose_map_type">Choose map type:</string>
    <string-array name="pref_map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
    </string-array>
    <string-array name="pref_map_type_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_set_location_switch">Set the game location</string>
    <string name="pref_description_set_location_switch">If on, the game\'s location will be your location when you start the game. If off, the location will be George Square in Edinburgh.</string>

    <string name="pref_title_set_extreme_mode">EXTREME MODE</string>
    <string name="pref_description_set_extreme_mode">Want the ultimate challenge? 15 minute timer, the hardest maps for every song, only one guess!</string>

    <string name="pref_title_try_switch">Play with tries:</string>
    <string name="pref_description_try_switch">Want limited possible attempts to guess the song?</string>

    <string name="pref_title_try_amount">Set amount of times you can guess:</string>
    <string name="pref_description_try_amount">Set the amount of times you can try to guess the song, before it\'s game over</string>
    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

</resources>
