<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adrianczuczka.songle.GameUI">

    <android.widget.RelativeLayout
        android:id="@+id/game_ui_parent_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintLeft_toLeftOf="parent"
            map:layout_constraintRight_toRightOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            tools:context="com.adrianczuczka.songle.GameUI" />

        <ImageButton
            android:id="@+id/heatmap_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/image_button_style"
            android:src="@mipmap/heatmap"
            android:contentDescription="@string/turn_heatmap_on_and_off"/>

        <ImageButton
            android:id="@+id/marker_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/heatmap_button"
            android:layout_below="@+id/heatmap_button"
            android:layout_marginTop="11dp"
            android:background="@drawable/image_button_style"
            android:src="@mipmap/default_marker"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/game_ui_timer_view"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/marker_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:background="@drawable/image_button_style"
            android:fontFamily="@font/orbitron"
            android:padding="5dp"
            android:text=""
            android:textSize="25sp"
            android:visibility="gone" />
    </android.widget.RelativeLayout>

    <LinearLayout
        android:id="@+id/game_ui_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/marker_button"
        android:background="@drawable/bottom_sheet_border"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_ui_bottom_sheet_arrows"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/game_ui_bottom_sheet_left_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:rotation="180"
                android:src="@mipmap/arrow_down"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/game_ui_bottom_sheet_right_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:rotation="180"
                android:src="@mipmap/arrow_down"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <Button
            android:id="@+id/game_ui_show_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sniglet"
            android:text="@string/show_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/game_ui_guess_song_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/sniglet"
                android:hint="@string/guess_song_hint"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/game_ui_tries_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/sniglet"
                android:text=""
                android:textColor="@color/red" />

            <Button
                android:id="@+id/game_ui_guess_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sniglet"
                android:text="@string/guess_song" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
