...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/welcome_screen_play_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sniglet_extrabold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_play_button"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/welcome_screen_settings_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:width="100dp"
...
